--- a/springTest/src/main/resources/application.properties
+++ b/springTest/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.datasource.initialize=true
 spring.messages.cacheSeconds=86000
 
 #this allows to change pages without restart container.
-spring.thymeleaf.prefix=classpath:/views/
+#spring.thymeleaf.prefix=classpath:/views/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
